manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __CI_BUILD_REF_SLUG__-monitor
  namespace: __CI_BUILD_REF_SLUG__
  labels:
    app: __CI_BUILD_REF_SLUG__-monitor
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - monitor.__CI_ENV_SLUG__.bolchain.net
    secretName: __CI_BUILD_REF_SLUG__-monitor-tls
  rules:
  - host: monitor.__CI_ENV_SLUG__.bolchain.net
    http:
      paths:
      - path: /
        backend:
          serviceName: __CI_BUILD_REF_SLUG__-monitor
          servicePort: 80
